--- a/new-templates/firstpage.html
+++ b/new-templates/firstpage.html
@@ -10,12 +10,26 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="firstpage.css">
     <title>firstpage</title>
+    <script>
+        window.onload = function() {
+            document.getElementById('loader').style.display = "none";
+            document.getElementById('content').style.display = "block";
+
+        }
+    </script>
 </head>
 
 <body style="background-color: #354152;">
-    <nav class="navbar navbar-expand-lg  bg-dark">
-        <a class="navbar btn btn-outline-warning my-2 my-sm-0" href="{% url 'home' %}"> <b>jUSTNOTE</b></a>
-        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" a-label="Toggle navigation">
+
+    <div id="loader">
+        <img class="container" src="g2.gif" alt="">
+    </div>
+
+    <div id="content">
+
+        <nav class="navbar navbar-expand-lg  bg-dark">
+            <a class="navbar btn btn-outline-warning my-2 my-sm-0" href="{% url 'home' %}"> <b>jUSTNOTE</b></a>
+            <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" a-label="Toggle navigation">
             <svg width="1em" height="1em" viewBox="0 0 16 16"
                 class="bi bi-border-width btn-outline-warning my-2 my-sm-0" fill="currentColor"
                 xmlns="http://www.w3.org/2000/svg">
@@ -25,87 +39,97 @@
         </button>
 
 
-        <div class="collapse navbar-collapse  " id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto ">
-                <li class="nav-item active">
-                    <a class="nav-link  btn-outline-warning my-2 my-sm-0" href="{% url 'login' %}">Login <span
+            <div class="collapse navbar-collapse  " id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto ">
+                    <li class="nav-item active">
+                        <a class="nav-link  btn-outline-warning my-2 my-sm-0" href="{% url 'login' %}">Login <span
                             class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link  btn-outline-warning my-2 my-sm-0" href="{% url 'signup' %}">Signin <span
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link  btn-outline-warning my-2 my-sm-0" href="{% url 'signup' %}">Signin <span
                             class="sr-only">(current)</span></a>
-                </li>
+                    </li>
 
-        </div>
-
-    </nav>
-
-    <div style="text-align: center;">
-        <br>
-        <h1 style="color:rgb(247, 161, 3) ;" class="font-weight-light">Free Note Taking app</h1>
-        <br>
-        <p style="color:rgb(247, 161, 3) " class="font-italic">Always plan ahead.It wasn't raining when Noah built the ark.</p>
-        <br>
-        <button class="btn btn-warning">GET STARTED - IT'S FREE!</button>
-    </div>
-    <br>
-    <br>
-
-    <div>
-        <img class=" img21 container-sm" src="\new-templates\n1.png" alt="">
-    </div>
-
-    <div class="container-sm">
-        <h4 style="color: rgb(247, 161, 3);">Step:1</h4>
-        <ul>
-            <li style="color: rgb(247, 161, 3);">Create justNote Account</li>
-        </ul>
-        <h4 style="color: rgb(247, 161, 3);">Step:2</h4>
-        <ul>
-            <li style="color: rgb(247, 161, 3);">Click on Type button on the top</li>
-            <li style="color: rgb(247, 161, 3);">Choose which type of note you want</li>
-            <h4 style="color: rgb(247, 161, 3);">paragraph</h4>
-
-            <ul>
-                <li style="color: rgb(247, 161, 3);">Click on paragraph option</li>
-                <li style="color: rgb(247, 161, 3);">Write your important notes on paragraph-check anytime or any device by login option</li>
-            </ul>
-            <h4 style="color: rgb(247, 161, 3);">TODO</h4>
-
-            <ul>
-                <li style="color: rgb(247, 161, 3);">Click on TODO option</li>
-                <li style="color: rgb(247, 161, 3);">Write your daily task on the top of the box and click "Add" button After completing click on "Done" Button </li>
-                <li style="color: rgb(247, 161, 3);">Plan your day in a simple click</li>
-
-            </ul>
-
-
-        </ul>
-        <h4 style="color: rgb(247, 161, 3);">Step:3</h4>
-        <ul>
-            <li style="color: rgb(247, 161, 3);">Search your note by simple and TODO list by simple clicking on "Search Box" Home</li>
-        </ul>
-    </div>
-
-
-
-    <br><br><br>
-    <div style="text-align: center;">
-
-        <button class="btn btn-warning">GET STARTED - IT'S FREE!</button>
-    </div><br><br><br>
-
-    <!-- footer -->
-    <footer>
-        <div class="footer" style="background-color: #354152; text-align:center;">
-            <div class="inner-footer">
-                <p style="color:aliceblue; ">© 2009 - 2020 by JustNote . All Rights
-                    <a href="">Copyright</a> | <a href="">Terms of Use &amp; Privacy Policy</a></p>
-                <p style="color:aliceblue">Contact us: <span class="mx-green mx-bold">info.india<span class="mx-none">@</span>justNote.com</span>
-                </p>
             </div>
+
+        </nav>
+
+
+
+        <div style="text-align: center;">
+            <br>
+            <h1 style="color:rgb(247, 161, 3) ;" class="font-weight-light">Free Note Taking app</h1>
+            <br>
+            <p style="color:rgb(247, 161, 3) " class="font-italic">Always plan ahead.It wasn't raining when Noah built the ark.</p>
+            <br>
+            <button class="btn btn-warning">GET STARTED - IT'S FREE!</button>
         </div>
-    </footer>
+        <br>
+        <br>
+
+        <div>
+            <img class=" img21 container-sm" src="\new-templates\n1.png" alt="">
+        </div>
+
+        <div class="container-sm">
+            <h4 style="color: rgb(247, 161, 3);">Step:1</h4>
+            <ul>
+                <li style="color: rgb(247, 161, 3);">Create justNote Account</li>
+            </ul>
+            <h4 style="color: rgb(247, 161, 3);">Step:2</h4>
+            <ul>
+                <li style="color: rgb(247, 161, 3);">Click on Type button on the top</li>
+                <li style="color: rgb(247, 161, 3);">Choose which type of note you want</li>
+                <h4 style="color: rgb(247, 161, 3);">paragraph</h4>
+
+                <ul>
+                    <li style="color: rgb(247, 161, 3);">Click on paragraph option</li>
+                    <li style="color: rgb(247, 161, 3);">Write your important notes on paragraph-check anytime or any device by login option</li>
+                </ul>
+                <h4 style="color: rgb(247, 161, 3);">TODO</h4>
+
+                <ul>
+                    <li style="color: rgb(247, 161, 3);">Click on TODO option</li>
+                    <li style="color: rgb(247, 161, 3);">Write your daily task on the top of the box and click "Add" button After completing click on "Done" Button </li>
+                    <li style="color: rgb(247, 161, 3);">Plan your day in a simple click</li>
+
+                </ul>
+
+
+            </ul>
+            <h4 style="color: rgb(247, 161, 3);">Step:3</h4>
+            <ul>
+                <li style="color: rgb(247, 161, 3);">Search your note by simple and TODO list by simple clicking on "Search Box" Home</li>
+            </ul>
+        </div>
+
+
+        <br><br>
+        <div>
+            <img class=" img21 container-sm" src="\new-templates\n33.png" alt="">
+        </div>
+
+        <br><br><br>
+        <div style="text-align: center;">
+
+            <button class="btn btn-warning">GET STARTED - IT'S FREE!</button>
+        </div><br><br><br>
+
+        <!-- footer -->
+        <footer>
+            <div class="footer" style="background-color: #354152; text-align:center;">
+                <div class="inner-footer">
+                    <p style="color:aliceblue; ">© 2009 - 2020 by JustNote . All Rights
+                        <a href="">Copyright</a> | <a href="">Terms of Use &amp; Privacy Policy</a></p>
+                    <p style="color:aliceblue">Contact us: <span class="mx-green mx-bold">info.india<span class="mx-none">@</span>justNote.com</span>
+                    </p>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+
+
 
 
 
